--- a/builder.ui
+++ b/builder.ui
@@ -2,69 +2,43 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
+  <!-- interface-css-provider-path style.css -->
   <object class="GtkWindow" id="window">
+    <property name="width-request">277</property>
+    <property name="height-request">398</property>
     <property name="visible">True</property>
     <property name="can-focus">False</property>
     <property name="startup-id">com.github.mdedmonds.todoapp</property>
     <child>
-      <!-- n-columns=3 n-rows=3 -->
-      <object class="GtkGrid" id="grid">
+      <object class="GtkLayout">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
+        <property name="width">277</property>
+        <property name="height">398</property>
         <child>
-          <object class="GtkButton" id="button">
-            <property name="label" translatable="yes">button</property>
+          <object class="GtkImage">
+            <property name="width-request">277</property>
+            <property name="height-request">398</property>
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="pixbuf">paper.png</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkTextView" id="line1">
+            <property name="width-request">228</property>
+            <property name="height-request">25</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
-            <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="left-attach">1</property>
-            <property name="top-attach">1</property>
+            <property name="x">47</property>
+            <property name="y">39</property>
           </packing>
         </child>
-        <child>
-          <object class="GtkButton">
-            <property name="label" translatable="yes">button</property>
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="receives-default">True</property>
-          </object>
-          <packing>
-            <property name="left-attach">0</property>
-            <property name="top-attach">0</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkButton">
-            <property name="label" translatable="yes">button</property>
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="receives-default">True</property>
-          </object>
-          <packing>
-            <property name="left-attach">2</property>
-            <property name="top-attach">2</property>
-          </packing>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
+        <style>
+          <class name="layout"/>
+        </style>
       </object>
     </child>
   </object>
